--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,152 @@
-.App {
+/* BASIC STYLING */
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+
+.App{
+  background-color: black;
+  height: 100vh;
+}
+
+
+/* NAV BAR */
+
+.nav-container{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav{
+  display: flex;
+  align-items: center;
+  background-color: white;
+  width: 50%;
+  justify-content: space-around;
+  border-radius: 0 0 30px 30px;
+
+}
+
+li{
+  list-style: none;
+  padding: 0.2rem 0rem;
+  font-size: 1.5rem;
+  font-family: "poppins",'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
+}
+
+.nav-link .icon{
+  padding: 0 0.3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2.7rem;
+  position: relative;
+  top: -20px;
+  padding-bottom: 0;
+  transition: all 0.3s ease;
+  z-index: 1;
+  opacity: 1;
+}
+
+
+.nav-link .title{
+  position: relative;
+  top: -50px;
+  transition: all 0.3s ease;
+  opacity: 0;
+}
+
+.nav-link{
+  color: #00A0FF;
+  text-decoration: none;
+}
+
+.nav-item{
+  width: 20%;
+  height: auto;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nav-item .nav-link:hover .icon{
+  transform: translateY(60px);
+  color: white;
+  /* opacity: 0; */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.nav-item .nav-link:hover .title{
+  transform: translateY(60px);
+  opacity: 1;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.nav-link .achievements{
+  padding: 0;
+}
+
+.nav-link::after{
+  content: " ";
+  display: inline-block;
+  height: 80px;
+  width: 80px;
+  background-color: #00A0FF;
+  position: absolute;
+  transform: translate(-50px,-82px);
+  border-radius: 50%;
+
+  transition: all 0.3s ease;
+  
+  opacity: 0;
+  border: 10px solid black;
+}
+
+.nav-link:hover:after{
+  transform: translate(-50px,-30px);
+  opacity: 1;
+}
+
+.active::after{
+  transform: translate(-50px,-30px);
+  opacity: 1;
+}
+
+.active .title{
+  transform: translateY(60px);
+  opacity: 1;
+}
+
+.active .icon{
+  transform: translateY(60px);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+
+/* FOOTER */
+
+.footer{
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  height: 30vh;
+  width: 100%;
+  background: -webkit-gradient(linear, left top, right bottom, from(rgba(255, 255, 255, 0.3)), to(rgba(255, 255, 255, 0.1)));
+  background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1));
+  border-radius: 2rem;
+  z-index: 1;
+  -webkit-backdrop-filter: blur(2rem);
+          backdrop-filter: blur(2rem);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.background{
+  background-image: url(../src/Assets/bgfooter.webp);
+  width: 100%;
+  height: 30vh;
+  z-index: 0;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  border-radius: 2rem;
 }
