--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,6 @@ h1{
   width: 50%;
   justify-content: space-around;
   border-radius: 0 0 30px 30px;
-
 }
 
 li{
@@ -56,7 +55,6 @@ li{
   z-index: 1;
   opacity: 1;
 }
-
 
 .nav-link .title{
   position: relative;
@@ -127,6 +125,13 @@ li{
   color: white;
 }
 
+.nav-container{
+  transform: scale(0.9);
+  position: relative;
+  top: -5px;
+  z-index: 22;
+}
+
 
 /* FOOTER */
 
@@ -134,23 +139,14 @@ li{
   position: fixed;
   left: 0;
   bottom: 0;
-  height: 30vh;
+  height: 15vh;
   width: 100%;
   background: -webkit-gradient(linear, left top, right bottom, from(rgba(255, 255, 255, 0.3)), to(rgba(255, 255, 255, 0.1)));
   background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1));
-  border-radius: 2rem;
+
   z-index: 1;
-  -webkit-backdrop-filter: blur(2rem);
-          backdrop-filter: blur(2rem);
+  -webkit-backdrop-filter: blur(0.5rem);
+          backdrop-filter: blur(0.5rem);
 }
 
-.background{
-  background-image: url(../src/Assets/bgfooter.webp);
-  width: 100%;
-  height: 30vh;
-  z-index: 0;
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  border-radius: 2rem;
-}
+
