--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,17 @@
 /* BASIC STYLING */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "poppins",'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
 }
 
 h1{
   color: aliceblue;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 
 .App{
   background-color: black;
@@ -39,7 +41,6 @@ li{
   list-style: none;
   padding: 0.2rem 0rem;
   font-size: 1.5rem;
-  font-family: "poppins",'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
 }
 
 .nav-link .icon{
@@ -148,5 +149,31 @@ li{
   -webkit-backdrop-filter: blur(0.5rem);
           backdrop-filter: blur(0.5rem);
 }
+
+.footer-links{
+  display: flex;
+  width: 15%;
+  justify-content: space-around;
+  align-items: center;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-150%);
+}
+
+.footer-link{
+  color: #00A0FF;
+  font-size: 2rem;
+}
+
+.footer .copywrite {
+  font-family: ;
+  color: white;
+  font-size: 1.3rem;
+  position: relative;
+  top: 10%;
+  text-align: center;
+}
+
 
 
