--- a/src/App.css
+++ b/src/App.css
@@ -14,12 +14,10 @@ h1{
   color: aliceblue;
 }
 
-
 .App{
+  position: sticky;
   background-color: black;
-  height: 100vh;
 }
-
 
 /* Landing page */
 
@@ -147,27 +145,168 @@ li{
 }
 
 .nav-container{
-<<<<<<< HEAD
-  transform: scale(0.8);
-  position: relative;
-  top: -10px;
-  z-index: 22;
-=======
   transform: scale(0.7);
   position: relative;
   top: -12px;
-  z-index: 2;
->>>>>>> e35dc987b2f4898b99f5c8dcb1d3d863569332df
+  z-index: 22;
 }
 
+/* PARTICLES */
+
+.paricles{
+  position: sticky;
+  width: 100%;
+}
+
+/* PROJECTS */
+
+/* html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+} */
+
+.title2{
+  font-family: raleway-semibold,raleway,sans-serif;
+  font-size: 70px;
+  margin-bottom: 150px;
+  
+}
+.title2 {
+  overflow: hidden;
+  text-align: left;
+  color: #22375F;
+  
+}
+.title2:before,.title2:after {
+  background-color: rgb(82, 119, 126);
+  content: "";
+  display: inline-block;
+  height: 6px;
+  position:relative;
+  vertical-align:super;
+  width: 60%;
+  margin-top: 10%;
+  
+}
+.title2:before {
+  right: 2.5em;
+  margin-left: -50%;
+}
+.title2:after {
+  left: 0.5em;
+  margin-right: -50%;
+}
+
+.projects {
+  font-family: "Poppins", sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 10vh;
+  background: none;
+}
+
+.grid {
+  display: grid;
+  width: 114em;
+  grid-gap: 2rem;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  align-items: start;
+}
+
+.grid-item {
+
+  border-radius: 0.9rem;
+  overflow: hidden;
+  box-shadow: 0 5rem 10rem rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: 0.2s;
+}
+
+.grid-item:hover {
+  transform: translateY(-0.5%);
+  box-shadow: 0 4rem 8rem rgba(0, 0, 0, 0.5);
+}
+
+.card-img {
+  display: block;
+  width: 100%;
+  height: 20rem;
+  object-fit: cover;
+}
+
+.card-content {
+  padding: 3rem;
+}
+
+.card-header {
+  font-size: 3rem;
+  font-weight: 500;
+  color: #0d0d0d;
+  margin-bottom: 1.5rem;
+}
+
+.card-text {
+  font-size: 1.6rem;
+  letter-spacing: 0.1rem;
+  line-height: 1.7;
+  color: #3d3d3d;
+  margin-bottom: 2.5rem;
+}
+
+.card-btn {
+  display: block;
+  width: 100%;
+  padding: 1.5rem;
+  font-size: 2rem;
+  text-align: center;
+  color: #3363ff;
+
+  border: none;
+  border-radius: 0.4rem;
+  transition: 0.2s;
+  cursor: pointer;
+  letter-spacing: 0.1rem;
+}
+
+.card-btn span {
+  margin-left: 1rem;
+  transition: 0.2s;
+}
+
+.card-btn:hover,
+.card-btn:active {
+  background-color: #c2cffc;
+}
+
+.card-btn:hover span,
+.card-btn:active span {
+  margin-left: 1.5rem;
+}
+
+@media only screen and (max-width: 70em) and (min-width: 40em) {
+  .projects {
+    padding: 3rem;
+  }
+
+  .grid {
+    grid-gap: 3rem;
+  }
+}
+
+.projects{
+  height: fit-content;
+  transform: scale(0.5);
+}
 
 /* FOOTER */
 
 .footer{
-  position: fixed;
+  position:static;
   left: 0;
   bottom: 0;
-  height: 18vh;
+  height: 12vh;
   width: 100%;
   background: -webkit-gradient(linear, left top, right bottom, from(rgba(255, 255, 255, 0.3)), to(rgba(255, 255, 255, 0.1)));
   background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1));
@@ -183,14 +322,14 @@ li{
   justify-content: space-between;
   align-items: center;
   position: relative;
-  top: 70%;
-  left: 50%;
+  top: 60%;
+  left: 51%;
   transform: translate(-50%,-170%);
 }
 
 .footer-link{
   color: #00A0FF;
-  font-size: 3rem;
+  font-size: 2rem;
   position: relative;
   left: -1.5rem;
 }
@@ -202,8 +341,8 @@ li{
   height: 4rem;
   background-color: #ffffff;
   position: absolute;
-  left: 0;
-  top: -0.3rem;
+  left: -0.5rem;
+  top: -0.5rem;
   z-index: -1;
   border-radius: 50%;
 }
