--- a/src/App.css
+++ b/src/App.css
@@ -30,12 +30,12 @@ h1{
 }
 
 .draic-logo{
-  height: 40vh;
+  height: 30vh;
 }
 
 .text{
   font-weight: 800;
-  font-size: 6rem;
+  font-size: 4rem;
   width: 50%;
   /* font-family: "orbitron"; */
 }
@@ -307,8 +307,8 @@ li{
 
 /* .card-btn:hover,
 .card-btn:active {
-  background-color: #c2cffc;
-  color: white;
+background-color: #c2cffc;
+color: white;
 } */
 
 .card-btn:hover span,
@@ -332,9 +332,8 @@ li{
 }
 
 .background{
-
   border-radius: 20px;
-  transform: scale(0.75);
+  transform: scale(0.6);
   z-index: 5;
 }
 
@@ -396,17 +395,40 @@ li{
 }
 
 
+/* ///////////////// Depatment ////////////////// */
+
+.department-title{
+  text-align: center;
+  margin-top: 5rem;
+  color: #00A0FF;
+  font-size: 3rem;
+  z-index: 6;
+}
+
+.department-container{
+  display: flex;
+  justify-content: space-evenly;
+  width: 80%;
+  position: relative;
+  left: 50%;
+  transform: translate(-50%,0);
+  flex-wrap: wrap;
+  margin: 5rem 0 10rem 0;
+  z-index: 6;
+}
 
 /*//////////////  Profile Card  ///////////////*/
 .profile-card {
   box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
-    padding: 10px;
-    display: flex;
+    padding: 10px 0;
+    display: inline-flex;
     flex-direction: column;
     align-items: center;
-    width: 300px;
-    z-index: 2;
     border-radius: 10px;
+    flex: 0 0 22%;
+    margin: 1rem 1rem;
+    height: 45vh;
+    /* z-index: 6; */
 }
 .profile-card:hover{
   background-color: #2760a0;
@@ -415,24 +437,28 @@ li{
   backdrop-filter: blur( 4.5px );
   -webkit-backdrop-filter: blur( 4.5px );
   border-radius: 10px;
+  max-width: 50%;
 }
 
 .profile-card .text{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 40px;
-    padding-bottom: 0px;
-    padding-left: 10px;
-    padding-right: 10px;
-    border-radius: 20px;
+    justify-content: stretch;
+    height: 100%;
+    width: 100%;
+    margin: 4rem 0;
+    z-index: 6;
 }
 
 
 .profile-card .text img{
-    height: 130px;
+    height: 150px;
     border-radius: 50%;
     margin-bottom:10px;
+    position: relative;
+    top: -50px;
+    z-index: 6;
 }
 
 .profile-card .text h3{
@@ -444,7 +470,6 @@ li{
 .profile-card .text p{
     color:white;
     font-size: 15px;
-    margin-top: -5px;
     padding: 20px 0 10px 0;
 }
 
