--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@ h1{
 .App{
   position: sticky;
   background: linear-gradient(to right top,rgb(0, 1, 88),rgb(0, 0, 0));
+  transition: 0.5s ease;
 }
 
 /* Landing page */
