--- a/src/Components/deck.css
+++ b/src/Components/deck.css
@@ -1,6 +1,7 @@
 .deck-button {
   text-align: center;
-  margin: 40px;
+  margin-top: 200px;
+  margin-bottom: 90px;
 }
 .button {
   background-color: #00A0FF;
