--- a/src/Components/HomeAbout.css
+++ b/src/Components/HomeAbout.css
@@ -152,11 +152,13 @@
     border-radius: 2rem;
     height: 100%;
     object-fit: cover;
+    z-index: 100;
   }
   .HomeAgrid2img{
     width: 100%;
     border-radius: 2rem;
     height: 15rem;
+    z-index: 100;
     object-fit: cover;
   }
   .HomeAtitle-img{
